feature: new API + gallery preview

--- a/client/views/content-lists/list-box.html
+++ b/client/views/content-lists/list-box.html
@@ -49,7 +49,7 @@
     <div class="sd-card__footer sd-card__footer--spread">
         <div>
             <span class="sd-text__info">Last modified: </span>
-            <span>{{ list.updatedAt | reldate}}</span>
+            <span>{{ list.updated_at | reldate}}</span>
         </div>
         <span class="label label--success label--hollow" ng-show="list.enabled">active</span>
     </div>
