--- a/client/views/settings/rules/rule-item.html
+++ b/client/views/settings/rules/rule-item.html
@@ -28,7 +28,7 @@
             <span ng-if="rule.configuration.fbia" class="label label--primary">
                 Facebook
             </span>
-            <i ng-if="rule.configuration.paywallSecured" class="icon-lock icon--blue"></i>
+            <i ng-if="rule.configuration.paywall_secured" class="icon-lock icon--blue"></i>
         </div>
     </div>
     <div class="sd-list-item__action-menu">
