--- a/client/views/settings/website-management/manage-routes.html
+++ b/client/views/settings/website-management/manage-routes.html
@@ -64,7 +64,7 @@
                                     </select>
                                 </div>
                                 <div class="item">
-                                    <span ng-model="newRoute.paywallSecured" sd-switch=""></span><label>Paywall secured</label>
+                                    <span ng-model="newRoute.paywall_secured" sd-switch=""></span><label>Paywall secured</label>
                                 </div>
                                 <div class="item">
                                     <label for="routeTemplate" translate>template name</label>
