--- a/client/views/settings/rules/rule-add-tenant.html
+++ b/client/views/settings/rules/rule-add-tenant.html
@@ -85,7 +85,7 @@
         </div>
 
         <div class="form__row"
-            ng-if="!newRule.action.tenant.outputChannel">
+            ng-if="!newRule.action.tenant.output_channel">
             <div class="sd-line-input sd-line-input--is-select">
                 <label class="sd-line-input__label">Route</label>
                 <select class="sd-line-input__select"
@@ -99,10 +99,10 @@
         </div>
         <div class="form__row">
             <sd-check ng-model="newRule.action.published">Auto Publish</sd-check>
-            <sd-check ng-model="newRule.action.fbia">Publish on Facebook</sd-check>
+            <sd-check ng-if="newRule.action.tenant.fbia_enabled" ng-model="newRule.action.fbia">Publish on Facebook</sd-check>
         </div>
-        <div class="form__row">
-            <sd-check ng-if="!newRule.action.tenant.outputChannel" ng-model="newRule.action.paywallSecured">Paywall Secured</sd-check>
+        <div class="form__row" ng-if="newRule.action.tenant.paywall_enabled && !newRule.action.tenant.output_channel">
+            <sd-check ng-model="newRule.action.paywall_secured">Paywall Secured</sd-check>
         </div>
     </div>
 </form>
