--- a/client/views/settings/rules/rule-preview.html
+++ b/client/views/settings/rules/rule-preview.html
@@ -22,7 +22,7 @@
 		<span ng-if="webPublisherSettings.selectedRule.configuration.route" class="label label--success margin--right" ng-class="{'label--hollow' : !webPublisherSettings.selectedRule.configuration.published}">
 			{{webPublisherSettings.getRouteNameByTenantAndId(webPublisherSettings.selectedRule.tenantCode , webPublisherSettings.selectedRule.configuration.route)}}
 		</span>
-		<span ng-if="webPublisherSettings.selectedRule.configuration.paywallSecured" class="label label--red2 margin--right">
+		<span ng-if="webPublisherSettings.selectedRule.configuration.paywall_secured" class="label label--red2 margin--right">
 			Paywall Secured
 		</span>
 		<span ng-if="webPublisherSettings.selectedRule.configuration.fbia" class="label label--primary">
