--- a/client/views/settings/website-management/manage.html
+++ b/client/views/settings/website-management/manage.html
@@ -2,7 +2,7 @@
     <h2 class="sd-page__page-heading">{{webPublisherSettings.selectedSite.name}}</h2>
     <div class="pull-right">
         <a class="btn btn--text-only" target="_blank"
-            ng-href="{{webPublisherSettings.selectedSite.subdomain ? 'http://' + webPublisherSettings.selectedSite.subdomain + '.' + webPublisherSettings.selectedSite.domainName: 'http://' + webPublisherSettings.selectedSite.domainName}}">
+            ng-href="{{webPublisherSettings.selectedSite.subdomain ? 'http://' + webPublisherSettings.selectedSite.subdomain + '.' + webPublisherSettings.selectedSite.domain_name: 'http://' + webPublisherSettings.selectedSite.domain_name}}">
             <i class="icon-globe"></i> Open website
         </a>
     </div>
@@ -51,7 +51,7 @@
                 class="nav-tabs__link"><span translate="">Theme</span></button>
         </li>
         <li ng-class="{'nav-tabs__tab--active': webPublisherSettings.manageTab === 'theme-settings'}" class="nav-tabs__tab"
-            ng-if="!webPublisherSettings.selectedSite.outputChannel && webPublisherSettings.themeSettings.settings.length">
+            ng-if="!webPublisherSettings.selectedSite.output_channel && webPublisherSettings.themeSettings.settings.length">
             <button ng-click="webPublisherSettings.changeManageTab('theme-settings')"
                 ng-disabled="!webPublisherSettings.selectedSite.code || webPublisherSettings.siteForm.$dirty"
                 class="nav-tabs__link"><span translate="">Theme Customization</span></button>
