--- a/client/views/output/publishing-pane.html
+++ b/client/views/output/publishing-pane.html
@@ -89,7 +89,7 @@
     </div>
     <div class="side-panel__footer side-panel__footer--button-box-large" ng-if="webPublisherOutput.activePublishPane === 'unpublish'">
         <button class="btn btn--large btn--alert btn--expanded"
-            ng-disabled="webPublisherOutput._isEmpty(webPublisherOutput.newDestinations)"
+            ng-disabled="webPublisherOutput._isAnythingToUnpublish()"
             ng-click="webPublisherOutput.unPublishArticle()">Unpublish</button>
     </div>
 </div>
